--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,22 @@
 {
-    "name" : "uni-music",
-    "appid" : "",
-    "description" : "",
-    "versionName" : "1.0.0",
-    "versionCode" : "100",
-    "transformPx" : false,
-    "app-plus" : {
+    "name": "uni-music",
+    "appid": "",
+    "description": "",
+    "versionName": "1.0.0",
+    "versionCode": "100",
+    "transformPx": false,
+    "app-plus": {
         /* 5+App特有相关 */
-        "usingComponents" : true,
-        "nvueCompiler" : "uni-app",
-        "nvueStyleCompiler" : "uni-app",
-        "modules" : {},
+        "usingComponents": true,
+        "nvueCompiler": "uni-app",
+        "nvueStyleCompiler": "uni-app",
+        "modules": {},
         /* 模块配置 */
-        "distribute" : {
+        "distribute": {
             /* 应用发布信息 */
-            "android" : {
+            "android": {
                 /* android打包配置 */
-                "permissions" : [
+                "permissions": [
                     "<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>",
                     "<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>",
                     "<uses-permission android:name=\"android.permission.VIBRATE\"/>",
@@ -34,26 +34,28 @@
                     "<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
                 ]
             },
-            "ios" : {},
+            "ios": {},
             /* ios打包配置 */
-            "sdkConfigs" : {}
+            "sdkConfigs": {}
         }
     },
     /* SDK配置 */
-    "quickapp" : {},
+    "quickapp": {},
     /* 快应用特有相关 */
-    "mp-weixin" : {
+    "mp-weixin": {
         /* 小程序特有相关 */
-        "appid" : "wxc081512a913ace93",
-        "setting" : {
-            "urlCheck" : false,
-            "minified" : true,
-            "postcss" : true,
-            "es6" : true
+        "appid": "wxc081512a913ace93",
+        "setting": {
+            "urlCheck": false,
+            "minified": true,
+            "postcss": true,
+            "es6": true
         },
-        "usingComponents" : true,
-        "lazyCodeLoading" : "requiredComponents",
-		"requiredBackgroundModes": ["audio"]
+        "usingComponents": true,
+        "lazyCodeLoading": "requiredComponents",
+        "requiredBackgroundModes": [
+            "audio"
+        ]
     },
-    "vueVersion" : "2"
+    "vueVersion": "2"
 }
